# Multi-Agent-Product-Analytics

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT_INSTRUCTIONS.md  README.md  WALKTHROUGH.md  decisions.md  docker-compose.yml  dvc.yaml  mlflow.db  progress.md  pyproject.toml  requirements.txt  roadmap.md
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: PROJECT_INSTRUCTIONS.md  WALKTHROUGH.md  decisions.md  progress.md  project_spec.docx
models/anomaly_detector/: metadata.json  scaler.joblib
models/mistral-qlora/mistral-qlora-adapter/: adapter_config.json
models/mistral-qlora/mistral-qlora-adapter/mistral-qlora-adapter/: adapter_config.json
notebooks/: 01_eda.ipynb  02_finetune_mistral.ipynb  03_mistral_inference.ipynb
reports/: drift_summary.json
src/agents/: analyzer.py  auditor.py  graph.py  rewriter.py  supervisor.py
src/api/: main.py  semantic_search.py
src/dashboard/: app.py  ner_inline.py
src/data/: create_labels.py  create_summary_pairs.py  download.py  label_shipping.py  load_postgres.py  load_snowflake.py
src/evaluation/: ab_test.py  llm_judge.py
src/features/: feature_pipeline.py  generate_embeddings.py  ner_extractor.py
src/mlops/: drift_monitor.py
src/models/: anomaly_detector.py  eval_classifier.py  helpfulness_predictor.py  root_cause_classifier.py
src/scripts/: migrate_to_neon.py
tests/: test_ner.py
